import com.github.gradle.node.npm.task.NpmTask

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'com.github.node-gradle.node' version '7.0.1'
}

group = 'com.gijun'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
}

node {
    version = '20.10.0'
    npmVersion = '10.2.3'
    download = true
    nodeProjectDir = file("${project.projectDir}/frontend")
}

// 기존 npmInstall 태스크 설정 수정
tasks.named('npmInstall') {
    workingDir = file("${project.projectDir}/frontend")
    outputs.dir("${project.projectDir}/frontend/node_modules")
    outputs.file("${project.projectDir}/frontend/package-lock.json")
}

tasks.register('npmBuild', NpmTask) {
    dependsOn npmInstall
    args = ['run', 'build']
    workingDir = file("${project.projectDir}/frontend")
    inputs.files("${project.projectDir}/frontend/package.json")
    inputs.files("${project.projectDir}/frontend/package-lock.json")
    inputs.dir("${project.projectDir}/frontend/src")
    outputs.dir("${project.projectDir}/frontend/dist")
}

tasks.register('copyFrontendBuild', Copy) {
    dependsOn npmBuild
    from("${project.projectDir}/frontend/dist")
    into("${buildDir}/resources/main/static")
    doFirst {
        delete "${buildDir}/resources/main/static"
        file("${buildDir}/resources/main/static").mkdirs()
    }
}

tasks.register('npmDev', NpmTask) {
    args = ['run', 'dev']
    workingDir = file("${project.projectDir}/frontend")
}

// 리소스 디렉토리 설정
sourceSets {
    main {
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

tasks.named('clean') {
    delete "${buildDir}/resources/main/static"
    delete "${project.projectDir}/frontend/dist"
}

tasks.named('processResources') {
    dependsOn copyFrontendBuild
}

tasks.named('bootJar') {
    dependsOn processResources
}

tasks.named('bootRun') {
    dependsOn processResources
}

tasks.named('test') {
    useJUnitPlatform()
}

// 에러 처리 개선
gradle.taskGraph.whenReady { graph ->
    tasks.withType(NpmTask) { task ->
        task.doFirst {
            if (!file("${project.projectDir}/frontend/package.json").exists()) {
                throw new GradleException("Frontend project not found. Please check if package.json exists in ${project.projectDir}/frontend/")
            }
        }
    }
}

// 빌드 캐시 설정
tasks.withType(NpmTask) {
    inputs.property('node.version', node.version)
    inputs.property('npm.version', node.npmVersion)
}